--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,5 @@ add_subdirectory(Chapter4)
 add_subdirectory(Chapter5)
 add_subdirectory(Chapter7)
 add_subdirectory(Chapter8)
+add_subdirectory(Chapter9)
 add_subdirectory(Public)
